[gd_scene load_steps=4 format=3 uid="uid://bk60eq71bns8l"]

[ext_resource type="Theme" uid="uid://escslxlmxq8s" path="res://assets/theme.tres" id="1_vnqwo"]
[ext_resource type="FontFile" uid="uid://bxpu632mf8itb" path="res://assets/font/Connor4px.ttf" id="2_b4h2r"]
[ext_resource type="Script" uid="uid://mye2ev8jprsb" path="res://scenes/sound_settings.gd" id="2_lt7em"]

[node name="SoundSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_vnqwo")
script = ExtResource("2_lt7em")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
columns = 3

[node name="MasterLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVSlider" type="VSlider" parent="GridContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="MusicVSlider" type="VSlider" parent="GridContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="SFXVSlider" type="VSlider" parent="GridContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01

[node name="MasterValLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicValLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXValLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_b4h2r")
theme_override_font_sizes/font_size = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="GridContainer/MasterVSlider" to="." method="_on_master_v_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/MusicVSlider" to="." method="_on_music_v_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/SFXVSlider" to="." method="_on_sfxv_slider_value_changed"]
